// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapping Jest tests 1`] = `
{
  "./tmp/appmap/jest/exception_handling/intentionally_throws.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "test.js:18",
                "name": "errorOut",
                "static": true,
                "type": "function",
              },
            ],
            "name": "test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "test",
        "event": "call",
        "id": 1,
        "lineno": 18,
        "method_id": "errorOut",
        "parameters": [],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "exceptions": [
          {
            "class": "TestError",
            "message": "test error",
            "object_id": 2,
          },
        ],
        "id": 2,
        "parent_id": 1,
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "TestError",
        "message": "test error",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "exception handling intentionally throws",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/exception_handling/times_out.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "test.js:22",
                "name": "wait",
                "static": true,
                "type": "function",
              },
            ],
            "name": "test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "test",
        "event": "call",
        "id": 1,
        "lineno": 22,
        "method_id": "wait",
        "parameters": [
          {
            "class": "Number",
            "name": "ms",
            "value": "20",
          },
        ],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise",
          "object_id": 3,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "String",
        "message": "Exceeded timeout of 10 ms for a test.
Add a timeout value to this test to increase the timeout, if this is a long-running test. See https://jestjs.io/docs/api#testname-fn-timeout.",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "exception handling times out",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/jest_test_with_async_library/instrumented_lambda_does_not_cause_timeout.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "asyncLib.test.js:4",
                "name": "lambda1",
                "static": true,
                "type": "function",
              },
            ],
            "name": "asyncLib.test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "eventUpdates": {
      "2": {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 1,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
      "4": {
        "elapsed": 31.337,
        "event": "return",
        "id": 4,
        "parent_id": 3,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 2,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
    },
    "events": [
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 1,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task1'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise",
          "object_id": 1,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 3,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task2'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 4,
        "parent_id": 3,
        "return_value": {
          "class": "Promise",
          "object_id": 2,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "jest test with async library instrumented lambda does not cause timeout",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "succeeded",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/sub/subtracts_numbers_correctly.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "calc.js:1",
                "name": "sum",
                "static": true,
                "type": "function",
              },
            ],
            "name": "calc",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "calc",
        "event": "call",
        "id": 1,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "JestAssertionError",
        "message": "[2mexpect([22m[31mreceived[39m[2m).[22mtoBe[2m([22m[32mexpected[39m[2m) // Object.is equality[22m

Expected: [32m-1[39m
Received: [31m3[39m",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "sub subtracts numbers correctly",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/sum/sums_numbers_correctly.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "calc.js:1",
                "name": "sum",
                "static": true,
                "type": "function",
              },
            ],
            "name": "calc",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "calc",
        "event": "call",
        "id": 1,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "sum sums numbers correctly",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "succeeded",
    },
    "version": "1.12",
  },
}
`;

exports[`mapping Jest tests with process recording active 1`] = `
{
  "./tmp/appmap/jest/exception_handling/intentionally_throws.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "test.js:18",
                "name": "errorOut",
                "static": true,
                "type": "function",
              },
            ],
            "name": "test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "test",
        "event": "call",
        "id": 1,
        "lineno": 18,
        "method_id": "errorOut",
        "parameters": [],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "exceptions": [
          {
            "class": "TestError",
            "message": "test error",
            "object_id": 2,
          },
        ],
        "id": 2,
        "parent_id": 1,
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "TestError",
        "message": "test error",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "exception handling intentionally throws",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/exception_handling/times_out.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "test.js:22",
                "name": "wait",
                "static": true,
                "type": "function",
              },
            ],
            "name": "test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "test",
        "event": "call",
        "id": 1,
        "lineno": 22,
        "method_id": "wait",
        "parameters": [
          {
            "class": "Number",
            "name": "ms",
            "value": "20",
          },
        ],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise",
          "object_id": 3,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "String",
        "message": "Exceeded timeout of 10 ms for a test.
Add a timeout value to this test to increase the timeout, if this is a long-running test. See https://jestjs.io/docs/api#testname-fn-timeout.",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "exception handling times out",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/jest_test_with_async_library/instrumented_lambda_does_not_cause_timeout.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "asyncLib.test.js:4",
                "name": "lambda1",
                "static": true,
                "type": "function",
              },
            ],
            "name": "asyncLib.test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "eventUpdates": {
      "2": {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 4,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
      "4": {
        "elapsed": 31.337,
        "event": "return",
        "id": 4,
        "parent_id": 3,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 5,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
    },
    "events": [
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 1,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task1'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Promise",
          "object_id": 4,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 3,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task2'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 4,
        "parent_id": 3,
        "return_value": {
          "class": "Promise",
          "object_id": 5,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "jest test with async library instrumented lambda does not cause timeout",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "succeeded",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/sub/subtracts_numbers_correctly.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "calc.js:1",
                "name": "sum",
                "static": true,
                "type": "function",
              },
            ],
            "name": "calc",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "calc",
        "event": "call",
        "id": 1,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "exception": {
        "class": "JestAssertionError",
        "message": "[2mexpect([22m[31mreceived[39m[2m).[22mtoBe[2m([22m[32mexpected[39m[2m) // Object.is equality[22m

Expected: [32m-1[39m
Received: [31m3[39m",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "sub subtracts numbers correctly",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "failed",
    },
    "version": "1.12",
  },
  "./tmp/appmap/jest/sum/sums_numbers_correctly.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "calc.js:1",
                "name": "sum",
                "static": true,
                "type": "function",
              },
            ],
            "name": "calc",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "events": [
      {
        "defined_class": "calc",
        "event": "call",
        "id": 1,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "sum sums numbers correctly",
      "recorder": {
        "name": "jest",
        "type": "tests",
      },
      "test_status": "succeeded",
    },
    "version": "1.12",
  },
  "./tmp/appmap/process/<timestamp 0>.appmap.json": {
    "classMap": [
      {
        "children": [
          {
            "children": [
              {
                "location": "asyncLib.test.js:4",
                "name": "lambda1",
                "static": true,
                "type": "function",
              },
            ],
            "name": "asyncLib.test",
            "type": "class",
          },
          {
            "children": [
              {
                "location": "calc.js:1",
                "name": "sum",
                "static": true,
                "type": "function",
              },
            ],
            "name": "calc",
            "type": "class",
          },
          {
            "children": [
              {
                "location": "test.js:18",
                "name": "errorOut",
                "static": true,
                "type": "function",
              },
              {
                "location": "test.js:22",
                "name": "wait",
                "static": true,
                "type": "function",
              },
            ],
            "name": "test",
            "type": "class",
          },
        ],
        "name": "jest-appmap-node-test",
        "type": "package",
      },
    ],
    "eventUpdates": {
      "10": {
        "elapsed": 31.337,
        "event": "return",
        "id": 10,
        "parent_id": 9,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 4,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
      "12": {
        "elapsed": 31.337,
        "event": "return",
        "id": 12,
        "parent_id": 11,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 5,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
      "8": {
        "elapsed": 31.337,
        "event": "return",
        "id": 8,
        "parent_id": 7,
        "return_value": {
          "class": "Promise<undefined>",
          "object_id": 3,
          "value": "Promise { undefined }",
        },
        "thread_id": 0,
      },
    },
    "events": [
      {
        "defined_class": "calc",
        "event": "call",
        "id": 1,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 2,
        "parent_id": 1,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "calc",
        "event": "call",
        "id": 3,
        "lineno": 1,
        "method_id": "sum",
        "parameters": [
          {
            "class": "Number",
            "name": "x",
            "value": "1",
          },
          {
            "class": "Number",
            "name": "y",
            "value": "2",
          },
        ],
        "path": "calc.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 4,
        "parent_id": 3,
        "return_value": {
          "class": "Number",
          "value": "3",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "test",
        "event": "call",
        "id": 5,
        "lineno": 18,
        "method_id": "errorOut",
        "parameters": [],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "exceptions": [
          {
            "class": "TestError",
            "message": "test error",
            "object_id": 2,
          },
        ],
        "id": 6,
        "parent_id": 5,
        "thread_id": 0,
      },
      {
        "defined_class": "test",
        "event": "call",
        "id": 7,
        "lineno": 22,
        "method_id": "wait",
        "parameters": [
          {
            "class": "Number",
            "name": "ms",
            "value": "20",
          },
        ],
        "path": "test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 8,
        "parent_id": 7,
        "return_value": {
          "class": "Promise",
          "object_id": 3,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 9,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task1'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 10,
        "parent_id": 9,
        "return_value": {
          "class": "Promise",
          "object_id": 4,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
      {
        "defined_class": "asyncLib.test",
        "event": "call",
        "id": 11,
        "lineno": 4,
        "method_id": "lambda1",
        "parameters": [
          {
            "class": "String",
            "name": "r",
            "value": "'task2'",
          },
        ],
        "path": "asyncLib.test.js",
        "static": true,
        "thread_id": 0,
      },
      {
        "elapsed": 31.337,
        "event": "return",
        "id": 12,
        "parent_id": 11,
        "return_value": {
          "class": "Promise",
          "object_id": 5,
          "value": "Promise { <pending> }",
        },
        "thread_id": 0,
      },
    ],
    "metadata": {
      "app": "jest-appmap-node-test",
      "client": {
        "name": "appmap-node",
        "url": "https://github.com/getappmap/appmap-node",
        "version": "test node-appmap version",
      },
      "language": {
        "engine": "Node.js",
        "name": "javascript",
        "version": "test node version",
      },
      "name": "test process recording",
      "recorder": {
        "name": "process",
        "type": "process",
      },
    },
    "version": "1.12",
  },
}
`;
